[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dev-dependencies]
reqwest = "0.11.23"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-web-actors = "4.2.0"
actix = "0.13.1"
serde = { version = "1.0.195", features = ["derive"] }
actix-cors = {  version = "0.7.0" , features = ["draft-private-network-access"] }
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["v4","serde","fast-rng","macro-diagnostics"] }
lab = "0.11.0"
openssl = { version = "0.10" }
lapin = "2.3.1"
mini-redis = "0.4.1"
amiquip = { version = "0.4.2", default-features = false }
env_logger = "0.10.1"
actix-redis = "0.13.0"
actix-session = "0.9.0"
serde_json = "1.0.108"
futures = "0.3.29"
futures-lite = "2.1.0"
tracing = "0.1.40"
failure = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
# tokio (no TLS)
sqlx = { version = "0.7", features = [ "runtime-async-std","runtime-tokio" , "postgres", "runtime-tokio-native-tls","runtime-async-std-native-tls", "chrono","uuid"] }
tokio = { version = "1.35.0", features = ["full"] }
async-std = "1.12.0"
anyhow = "1.0.75"
#failure = "0.1.8"
#futures = "0.3.29"
